<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/gradient">

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivGnomeImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/picture_placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="0.06999999" />

        <TextView
            android:id="@+id/tvGnomeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/gnome_name_placeholder"
            android:textColor="@color/textColorLight"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="0.64" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gnome_age"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvGnomeAge"
                        style="@style/ProfileActivityTextValues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/gnome_age_placeholder" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gnome_weight"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvGnomeWeight"
                        style="@style/ProfileActivityTextValues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/gnome_weight_default" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gnome_height"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvGnomeHeight"
                        style="@style/ProfileActivityTextValues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/gnome_height_default" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gnome_hair_color"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvGnomeHairColor"
                        style="@style/ProfileActivityTextValues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/gnome_hair_color_default" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gnome_profesions"
                android:drawableStart="@drawable/ic_work_black_24dp"
                android:drawablePadding="8dp"
                android:textStyle="italic|bold"
                android:textColor="@color/textColorGreenDark"
                android:textSize="20dp"
                android:drawableTint="@color/colorAccent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvProfesions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gnome_friends"
                android:drawableStart="@drawable/ic_people_black_24dp"
                android:drawablePadding="8dp"
                android:textStyle="italic|bold"
                android:textColor="@color/textColorGreenDark"
                android:textSize="20dp"
                android:drawableTint="@color/colorAccent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>