<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_with_radius">


    <ImageView
        android:id="@+id/ivGnomePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvGnomeName"
        style="@style/gnome_detail_persistent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/some_name"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivGnomePicture" />

    <TextView
        style="@style/gnome_detail_persistent"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/gnome_age"
        app:layout_constraintStart_toEndOf="@+id/ivGnomePicture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/gnome_detail_persistent"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/gnome_weight"
        app:layout_constraintStart_toEndOf="@+id/ivGnomePicture"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        style="@style/gnome_detail_persistent"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/gnome_height"
        app:layout_constraintStart_toEndOf="@+id/ivGnomePicture"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        style="@style/gnome_detail_persistent"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/gnome_hair_color"
        app:layout_constraintStart_toEndOf="@+id/ivGnomePicture"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        style="@style/gnome_detail_data"
        android:id="@+id/tvGnomeAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/gnome_detail_data"
        android:id="@+id/tvGnomeWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tvGnomeAge" />

    <TextView
        style="@style/gnome_detail_data"
        android:id="@+id/tvGnomeHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tvGnomeWeight" />

    <TextView
        style="@style/gnome_detail_data"
        android:id="@+id/tvGnomeHairColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tvGnomeHeight" />
</android.support.constraint.ConstraintLayout>